.provarCaches/00D410000011HE0EAM/objects/rstk__ictransreq__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_ictransreq</customHelpPage>
    <description>ictransreq__c</description>
    <fields>
        <fullName>RS_Test_Field1__c</fullName>
        <description>Test Field</description>
        <inlineHelpText>Test Field</inlineHelpText>
        <label>RS Test Field1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RS_WMS_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RS WMS Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__Transfer_Date__c</fullName>
        <defaultValue>Today ()</defaultValue>
        <inlineHelpText>Date of transfer</inlineHelpText>
        <label>Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_allocrequired__c</fullName>
        <formula>IF(
rstk__ictransreq_item__r.rstk__icitem_allocpolind__c, rstk__ictransreq_item__r.rstk__icitem_iccomcod__r.rstk__iccomcod_allocpol__c,
rstk__ictransreq_item__r.rstk__icitem_allocpol__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>formula_allocrequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__ictransreq_item__r.rstk__icitem_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp; TEXT(rstk__ictransreq_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__ictransreq_item__r.rstk__icitem_item__r.rstk__peitem_item__c + &quot;(&quot; + rstk__ictransreq_frsite__r.rstk__sysite_site__c + &quot;)-&quot; + TEXT(rstk__ictransreq_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_async__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field, working in conjunction with the Execute Transfer field, directs the processing associated with the execution of this transfer request to be done asynchronously.</inlineHelpText>
        <label>Execute Transfer Asynchronously</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_execute__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used to force the execution of a single Planned Transfer, moving the inventory and changing the status to Processed.</inlineHelpText>
        <label>Execute Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_frlocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Location ID for the Inventory Location from which the inventory will be transferred.</inlineHelpText>
        <label>Transfer From Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Planned Location Transfers</relationshipLabel>
        <relationshipName>ictransreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_frlocno__c</fullName>
        <inlineHelpText>This is the Location Number for the Inventory Location from which the inventory will be transferred.</inlineHelpText>
        <label>Transfer From Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_frlocnum__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ZZZZZTransfer From Location Number</label>
        <referenceTo>rstk__sylocnum__c</referenceTo>
        <relationshipLabel>Planned Location Transfers</relationshipLabel>
        <relationshipName>ictransreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_frproject__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Project from which the inventory will be transferred.</inlineHelpText>
        <label>Transfer From Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Planned Location Transfers</relationshipLabel>
        <relationshipName>ictransreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_frsite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Site from which the inventory will be transferred.</inlineHelpText>
        <label>Transfer From Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Planned Location Transfers</relationshipLabel>
        <relationshipName>ictransreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_group__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ZZZPacking Slip (Group) Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_iclicplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Source License Plate</label>
        <referenceTo>rstk__iclicplate__c</referenceTo>
        <relationshipLabel>Planned Location Transfers</relationshipLabel>
        <relationshipName>ictransreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_icreplenish__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Location Replenishment record that caused this Planned Transfer to be generated.</inlineHelpText>
        <label>Source DRP Replenishment Location</label>
        <referenceTo>rstk__icreplenish__c</referenceTo>
        <relationshipLabel>Planned Location Transfers</relationshipLabel>
        <relationshipName>ictransreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_ictransreqh__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This identifies the optional Planned Location Transfer Group assigned to this record.  Transfers can be grouped together for picking and shipping, tied together by being associated with a common group number.</inlineHelpText>
        <label>PLT Group (Packing Slip)</label>
        <referenceTo>rstk__ictransreqh__c</referenceTo>
        <relationshipLabel>Planned Location Transfers</relationshipLabel>
        <relationshipName>ictransreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Inventory Item Number of the item planned for transfer.</inlineHelpText>
        <label>Item Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Planned Location Transfers</relationshipLabel>
        <relationshipName>ictransreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_lotno__c</fullName>
        <inlineHelpText>If item is Lot controlled, the Lot number from which that inventory is to be transferred from is defined here.</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_origqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If the planned transfer quantity is changed or if the full quantity cannot be transferred and the Planned Transfer quantity is thus adjusted, this reflects the original quantity when the record was first added.</inlineHelpText>
        <label>Original Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_procdate__c</fullName>
        <inlineHelpText>Once the transfer is executed, this date is set to the date of the transfer.</inlineHelpText>
        <label>Date Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_reqdate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>This is the requested transfer date, set to the date the transfer record was added, or adjusted by any Transfer Request for Delay set on the source replenishment record.</inlineHelpText>
        <label>Requested Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_seq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Sequence Number of this record.</inlineHelpText>
        <label>Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_serials__c</fullName>
        <inlineHelpText>If item is Serial controlled, the serial numbers to be transferred are defined here.</inlineHelpText>
        <label>Serial Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_status__c</fullName>
        <inlineHelpText>Current status of this record.  Valid values are 

Planned (when first created)
Approved (needs to be set to execute transfer)
Hold (can be set by user)
Cancel (can be set by user)</inlineHelpText>
        <label>Transfer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_sydata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ZZZZZ_Transaction ID</label>
        <referenceTo>rstk__sydata__c</referenceTo>
        <relationshipLabel>Planned Location Transfers</relationshipLabel>
        <relationshipName>ictransreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_sydatamessage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transaction Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_sydatat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When the transfer is triggered, this is the identifier for the system data record that is used to execute the transfer.</inlineHelpText>
        <label>Transaction ID</label>
        <referenceTo>rstk__sydatat__c</referenceTo>
        <relationshipLabel>Planned Location Transfers</relationshipLabel>
        <relationshipName>ictransreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_tolocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Location ID of the Inventory Location that the replenishment quantity will be transferred to.</inlineHelpText>
        <label>Transfer To Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Planned Location Transfers (Transfer To Location ID)</relationshipLabel>
        <relationshipName>ictransreqs_tolocid</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_tolocno__c</fullName>
        <inlineHelpText>This is the Location Number of the Inventory Location that the replenishment quantity will be transferred to.</inlineHelpText>
        <label>Transfer To Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_tolocnum__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ZZZZTransfer To Location Number</label>
        <referenceTo>rstk__sylocnum__c</referenceTo>
        <relationshipLabel>Planned Location Transfers (ZZZZTransfer To Location Number)</relationshipLabel>
        <relationshipName>ictransreqs_tolocnum</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_toproject__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Project that the replenishment quantity will be transferred to.</inlineHelpText>
        <label>Transfer To Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Planned Location Transfers (Transfer To Project)</relationshipLabel>
        <relationshipName>ictransreqs_toproject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_tosite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Site that inventory will be transferred to.</inlineHelpText>
        <label>Transfer to Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Planned Location Transfers (Transfer to Site)</relationshipLabel>
        <relationshipName>ictransreqs_tosite</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_tracking__c</fullName>
        <inlineHelpText>Optional user-defined tracking number up to 30 characters in length.</inlineHelpText>
        <label>Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_transqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Quantity to be transferred to the To Inventory Location.</inlineHelpText>
        <label>Transfer Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates to users that this transfer is urgent and should be tended to immediately.</inlineHelpText>
        <label>Urgency Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreq_warnavail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Availability Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Planned Location Transfer</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Planned_Location_Transfers</fullName>
        <columns>NAME</columns>
        <columns>rstk__ictransreq_ictransreqh__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>RS_WMS_Test__c</columns>
        <columns>rstk__ictransreq_item__c</columns>
        <columns>rstk__ictransreq_seq__c</columns>
        <columns>rstk__ictransreq_execute__c</columns>
        <columns>rstk__ictransreq_status__c</columns>
        <columns>rstk__ictransreq_transqty__c</columns>
        <columns>rstk__ictransreq_procdate__c</columns>
        <columns>rstk__ictransreq_frsite__c</columns>
        <columns>rstk__ictransreq_frproject__c</columns>
        <columns>rstk__ictransreq_frlocid__c</columns>
        <columns>rstk__ictransreq_reqdate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Planned Location Transfers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planned Location Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Division</fullName>
        <active>false</active>
        <description>Division is not modifiable</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>Division Field is not Modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Item_Number</fullName>
        <active>true</active>
        <description>Item Number is not Modifiable</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(  rstk__ictransreq_item__c )</errorConditionFormula>
        <errorMessage>Item Number is not Modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Item_Number1</fullName>
        <active>true</active>
        <description>Item Number Field is Required</description>
        <errorConditionFormula>ISBLANK( rstk__ictransreq_item__c )</errorConditionFormula>
        <errorMessage>Item Number Field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Item_Number2</fullName>
        <active>false</active>
        <description>Item Number must belong to the Inventory Division</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>Item Number must belong to the Inventory Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__License_Plate</fullName>
        <active>true</active>
        <description>License Plate Field is not Modifiable</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(  rstk__ictransreq_iclicplate__c )</errorConditionFormula>
        <errorMessage>License Plate Field is not Modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Lot_Number1</fullName>
        <active>true</active>
        <description>Lot Number cannot be specified for a non lot item</description>
        <errorConditionFormula>ISPICKVAL(rstk__ictransreq_item__r.rstk__icitem_item__r.rstk__peitem_tracklot_pl__c, &apos;No&apos;) &amp;&amp; NOT(ISBLANK(rstk__ictransreq_lotno__c ))</errorConditionFormula>
        <errorMessage>Lot Number cannot be specified for a non lot item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Original_Quantity</fullName>
        <active>true</active>
        <description>Original Quantity  Field is not Modifiable</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(  rstk__ictransreq_origqty__c )</errorConditionFormula>
        <errorMessage>Original Quantity  Field is not Modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Processed_records</fullName>
        <active>true</active>
        <description>Fields are not modifiable  when ICTRANSREC_STATUS = ‘Processed’</description>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISPICKVAL( rstk__ictransreq_status__c , &apos;Processed&apos;) &amp;&amp; !ISCHANGED(rstk__ictransreq_status__c)</errorConditionFormula>
        <errorMessage>Fields are not modifiable  as request is already ‘Processed’ .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Replenishment</fullName>
        <active>true</active>
        <description>Replenishment Location Division must belong to the Inventory Division</description>
        <errorConditionFormula>!ISBLANK(rstk__ictransreq_icreplenish__c) &amp;&amp; (rstk__ictransreq_icreplenish__r.rstk__icreplenish_div__c &lt;&gt;  rstk__ictransreq_item__r.rstk__icitem_div__c)</errorConditionFormula>
        <errorMessage>Replenishment Location Division must belong to the Inventory Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Replenishment_Location</fullName>
        <active>true</active>
        <description>Replenishment Location  Field is not Modifiable</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(  rstk__ictransreq_icreplenish__c )</errorConditionFormula>
        <errorMessage>Replenishment Location  Field is not Modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Requested_Processing_Date</fullName>
        <active>true</active>
        <description>Requested Processing Date Field is Required</description>
        <errorConditionFormula>ISBLANK( rstk__ictransreq_reqdate__c )</errorConditionFormula>
        <errorMessage>Requested Processing Date Field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Requested_Processing_Date1</fullName>
        <active>true</active>
        <description>Requested Processing Date should be greater than or equal to Today</description>
        <errorConditionFormula>ISNEW() &amp;&amp; rstk__ictransreq_reqdate__c  &lt;  TODAY()</errorConditionFormula>
        <errorMessage>Requested Processing Date should be Greater than or equal to Today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sequence</fullName>
        <active>true</active>
        <description>Sequence is not Modifiable</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(rstk__ictransreq_seq__c)</errorConditionFormula>
        <errorMessage>Sequence is not Modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Serial_numbers1</fullName>
        <active>true</active>
        <description>Serial Number cannot be specified for a non serial item</description>
        <errorConditionFormula>ISPICKVAL(rstk__ictransreq_item__r.rstk__icitem_item__r.rstk__peitem_tracksrl_pl__c, &apos;No&apos;) &amp;&amp; NOT(ISBLANK( rstk__ictransreq_serials__c ))</errorConditionFormula>
        <errorMessage>Serial Number cannot be specified for a non serial item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_From_Location_ID1</fullName>
        <active>true</active>
        <description>Transfer From Location ID Field is Required if Request is already Approved or Processed</description>
        <errorConditionFormula>( ISBLANK( rstk__ictransreq_frlocid__c ) &amp;&amp;  (ISPICKVAL(rstk__ictransreq_status__c, &quot;Approved&quot;) ||  ISPICKVAL(rstk__ictransreq_status__c, &quot;Processed&quot;)))</errorConditionFormula>
        <errorMessage>Transfer From Location ID Field is Required if request is already Approved or Processed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_From_Location_ID2</fullName>
        <active>true</active>
        <description>Transfer from Location ID must belong to the Inventory Division</description>
        <errorConditionFormula>!ISBLANK(rstk__ictransreq_frlocid__c) &amp;&amp; (rstk__ictransreq_frlocid__r.rstk__sylocid_div__c &lt;&gt;  rstk__ictransreq_item__r.rstk__icitem_div__c)</errorConditionFormula>
        <errorMessage>Transfer from Location ID must belong to the Inventory Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_From_Location_ID3</fullName>
        <active>true</active>
        <description>Transfer from Location ID must belong to the Inventory Site Location ID</description>
        <errorConditionFormula>!ISBLANK(rstk__ictransreq_frlocid__c) &amp;&amp; (rstk__ictransreq_frsite__c &lt;&gt;  rstk__ictransreq_frlocid__r.rstk__sylocid_site__c)</errorConditionFormula>
        <errorMessage>Transfer from Location ID must belong to the Inventory Site</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_From_Location_Number1</fullName>
        <active>true</active>
        <description>Transfer From Location Number Field is Required if request is already Approved or Processed</description>
        <errorConditionFormula>( ISBLANK(  rstk__ictransreq_frlocno__c) &amp;&amp; (ISPICKVAL(rstk__ictransreq_status__c, &quot;Approved&quot;) || ISPICKVAL(rstk__ictransreq_status__c, &quot;Processed&quot;)))</errorConditionFormula>
        <errorMessage>Transfer From Location Number Field is Required if request is already Approved or Processed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_From_Project</fullName>
        <active>true</active>
        <description>Transfer From Project  should not be modifiable</description>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(rstk__ictransreq_frproject__c)</errorConditionFormula>
        <errorMessage>Transfer From Project  Field is not modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_From_Project1</fullName>
        <active>true</active>
        <description>Transfer From Project  Field is Required</description>
        <errorConditionFormula>ISBLANK(  rstk__ictransreq_frproject__c )</errorConditionFormula>
        <errorMessage>Transfer From Project  Field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_From_Project2</fullName>
        <active>true</active>
        <description>Transfer From Project  must belong to the Inventory Division</description>
        <errorConditionFormula>!ISBLANK(rstk__ictransreq_frproject__c) &amp;&amp; (rstk__ictransreq_frproject__r.rstk__pjproj_div__c &lt;&gt;  rstk__ictransreq_item__r.rstk__icitem_div__c)</errorConditionFormula>
        <errorMessage>Transfer From Project  must belong to the Inventory Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_From_Site</fullName>
        <active>true</active>
        <description>Transfer From Site Field is not Modifiable</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(  rstk__ictransreq_frsite__c )</errorConditionFormula>
        <errorMessage>Transfer From Site Field is not Modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_From_Site1</fullName>
        <active>true</active>
        <description>Transfer From Site Field is Required</description>
        <errorConditionFormula>ISBLANK(  rstk__ictransreq_frsite__c )</errorConditionFormula>
        <errorMessage>Transfer From Site Field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_From_Site2</fullName>
        <active>true</active>
        <description>Transfer From Site  must belong to the Inventory Division</description>
        <errorConditionFormula>!ISBLANK(rstk__ictransreq_frsite__c) &amp;&amp; (rstk__ictransreq_frsite__r.rstk__sysite_div__c &lt;&gt;  rstk__ictransreq_item__r.rstk__icitem_div__c)</errorConditionFormula>
        <errorMessage>Transfer From Site  must belong to the Inventory Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_Quantity</fullName>
        <active>true</active>
        <description>Transfer Quantity  Field is Required and should be greater than 0 (Zero)</description>
        <errorConditionFormula>ISBLANK( rstk__ictransreq_transqty__c ) || rstk__ictransreq_transqty__c &lt;= 0</errorConditionFormula>
        <errorMessage>Transfer Quantity  Field is Required and should be greater than 0 (Zero)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_Quantity1</fullName>
        <active>true</active>
        <description>Transfer Quantity cannot be changed if  ICTRANSREQ_STATUS = ‘Approved’</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(  rstk__ictransreq_transqty__c ) &amp;&amp;  ISPICKVAL( rstk__ictransreq_status__c , &quot;Approved&quot;)</errorConditionFormula>
        <errorMessage>Transfer Quantity Field is not Modifiable  if  request is already ‘Approved’</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_Status</fullName>
        <active>true</active>
        <description>Transfer Status Cannot be changed to ‘Approved’ as &quot;Transfer From Location Number&quot; or  &quot;Transfer From Location ID&quot;  is not provided.</description>
        <errorConditionFormula>ISPICKVAL(rstk__ictransreq_status__c, &quot;Approved&quot;) &amp;&amp; ( ISBLANK( rstk__ictransreq_frlocid__c ) || ISBLANK( rstk__ictransreq_frlocno__c))</errorConditionFormula>
        <errorMessage>Transfer Status Cannot be changed to ‘Approved’ as &quot;Transfer From Location Number&quot; or  &quot;Transfer From Location ID&quot;  is not provided.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_To_Location_ID1</fullName>
        <active>true</active>
        <description>Transfer  To Location ID Field is Required</description>
        <errorConditionFormula>ISBLANK( rstk__ictransreq_tolocid__c )</errorConditionFormula>
        <errorMessage>Transfer  To Location ID Field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_To_Location_ID2</fullName>
        <active>true</active>
        <description>Transfer to Location ID must belong to the Inventory Site Location ID</description>
        <errorConditionFormula>!ISBLANK(rstk__ictransreq_tolocid__c) &amp;&amp; (rstk__ictransreq_tosite__c &lt;&gt;  rstk__ictransreq_tolocid__r.rstk__sylocid_site__c)</errorConditionFormula>
        <errorMessage>Transfer to Location ID must belong to the Inventory Site Location ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_To_Location_Number1</fullName>
        <active>true</active>
        <description>Transfer To Location Number Field is Required</description>
        <errorConditionFormula>ISBLANK( rstk__ictransreq_tolocno__c)</errorConditionFormula>
        <errorMessage>Transfer To Location Number Field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_To_Project</fullName>
        <active>true</active>
        <description>Transfer To Project   Field is not Modifiable</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(rstk__ictransreq_toproject__c)</errorConditionFormula>
        <errorMessage>Transfer To Project   Field is not Modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_To_Project1</fullName>
        <active>true</active>
        <description>Transfer To Project Field is Required</description>
        <errorConditionFormula>ISBLANK( rstk__ictransreq_toproject__c )</errorConditionFormula>
        <errorMessage>Transfer To Project Field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_To_Project2</fullName>
        <active>true</active>
        <description>Transfer to Project  must belong to the Inventory Division</description>
        <errorConditionFormula>!ISBLANK(rstk__ictransreq_frproject__c) &amp;&amp; (rstk__ictransreq_frproject__r.rstk__pjproj_div__c &lt;&gt; rstk__ictransreq_item__r.rstk__icitem_div__c)</errorConditionFormula>
        <errorMessage>Transfer to Project  must belong to the Inventory Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_To_Site</fullName>
        <active>true</active>
        <description>Transfer To Site   Field is not Modifiable</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(  rstk__ictransreq_tosite__c  )</errorConditionFormula>
        <errorMessage>Transfer To Site   Field is not Modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_To_Site1</fullName>
        <active>true</active>
        <description>Transfer To Site Field is Required</description>
        <errorConditionFormula>ISBLANK( rstk__ictransreq_tosite__c )</errorConditionFormula>
        <errorMessage>Transfer To Site Field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transfer_To_Site2</fullName>
        <active>true</active>
        <description>Transfer to Site must belong to the Inventory Division</description>
        <errorConditionFormula>!ISBLANK(rstk__ictransreq_tosite__c) &amp;&amp; (rstk__ictransreq_tosite__r.rstk__sysite_div__c &lt;&gt;  rstk__ictransreq_item__r.rstk__icitem_div__c)</errorConditionFormula>
        <errorMessage>Transfer to Site must belong to the Inventory Division</errorMessage>
    </validationRules>
</CustomObject>